tests/baselines/reference/collisionRestParameterInType(strict=true).errors.txt
collisionRestParameterInType.ts(1,22): error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
collisionRestParameterInType.ts(3,5): error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
collisionRestParameterInType.ts(3,18): error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
collisionRestParameterInType.ts(4,5): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
collisionRestParameterInType.ts(4,22): error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
collisionRestParameterInType.ts(5,5): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
collisionRestParameterInType.ts(5,21): error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
collisionRestParameterInType.ts(6,24): error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.


==== collisionRestParameterInType.ts (8 errors) ====
    var v1: (_i: number, ...restParameters) => void; // no error - no code gen
                         ~~~~~~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
    var v2: {
        (_i: number, ...restParameters); // no error - no code gen
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
                     ~~~~~~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
        new (_i: number, ...restParameters); // no error - no code gen
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
                         ~~~~~~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
        foo(_i: number, ...restParameters); // no error - no code gen
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
                        ~~~~~~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
        prop: (_i: number, ...restParameters) => void; // no error - no code gen
                           ~~~~~~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
    }